<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/value"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/vl_convert" />

    <EditText
        android:id="@+id/edit_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/dolar"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/vl_dollar" />

    <EditText
        android:id="@+id/edit_euro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/euro"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/vl_euro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/price_in_dollar"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_result_dollar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/real_sign"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/price_in_euro"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/text_result_euro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@color/purple_500"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/real_sign"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="40dp"
        android:text="@string/calculate"
        android:textSize="30sp" />


</LinearLayout>